# sleepyminer

./: .gitignore  CREDITS.md  Cargo.toml  README.md  build.rs  config.example.json  grumpy-signing-key.asc
.github/workflows/: release.yml
assets/: banner.ansi
scripts/: release.sh
src/: animation.rs  logging.rs  main.rs
src/algo/: mod.rs
src/benchmark/: cache.rs  mod.rs
src/config/: cli.rs  mod.rs
src/donation/: mod.rs
src/miner/: mod.rs  nonce.rs  worker.rs
src/randomx/: aes.rs  blake2b.rs  cache.rs  dataset.rs  ffi.rs  hash.rs  jit.rs  mod.rs  superscalar.rs  vm.rs
src/scaling/: activity.rs  cpu_load.rs  mod.rs
src/service/: mod.rs
src/stratum/: connection.rs  mod.rs  pool.rs  protocol.rs
