[package]
name = "sleepyminer"
version = "0.1.0"
edition = "2021"
description = "Native Monero CPU miner for Apple Silicon with adaptive thread scaling"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha3 = "0.10"
sha2 = "0.10"
hex = "0.4"
log = "0.4"

tokio-rustls = "0.26"
rustls = "0.23"
webpki-roots = "0.26"
rand = "0.8"
libc = "0.2"
num_cpus = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[build-dependencies]
cmake = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
